ACTUALIZAR: Modificación de la descripción y formato del campo `expiration_date` en los archivos YAML, especificando el formato yyyy-MM-dd. Se añade el nuevo campo `database_id` para incluir el ID del medicamento en la base de datos GTIN, mejorando la información disponible en las solicitudes de registro de medicamentos.
